# Reverb-Plugin

./: CMakeLists.txt  README.md  dspfaust.dsp  poly_fm_synth.dsp
Images/: CMakeLists.txt
Source/: CustomKnobs.cpp  CustomKnobs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SwitchButton.h  dspfaust.h  polyFM.h  reverbDSP.h
